--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,13 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    h1= title
+  
+    div.result-container
+        //- - locals.data.items
+        - each reqdata in data.items
+            | Request
+            .each-result                
+                = reqdata.host
+                br.
+                = reqdata.connection
